<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
    android:id="@+id/login"
	android:fillViewport="true"
	android:filterTouchesWhenObscured="true">
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="vertical">
			<ImageView android:id="@+id/logo" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal" 
				android:paddingTop="5pt"/>
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_weight="1"
			android:orientation="vertical">
			<TextView
                android:id="@+id/invite"
                android:text="@string/invite"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:textSize="20sp"
                android:textColor="?android:attr/textColorPrimary" />
            <View
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="1" />
                
            <TextView
            	android:id="@+id/label_username"
                android:text="@string/label_username"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?android:attr/textColorPrimary" />
            <EditText
                android:id="@+id/account_username"
                android:hint="@string/hint_username"
                android:inputType="textNoSuggestions"
                android:imeOptions="actionNext"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent" />
                
            <TextView
            	android:id="@+id/label_password"
                android:text="@string/label_password"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?android:attr/textColorPrimary" />
            <EditText
                android:id="@+id/account_password"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent" />
                
            <View
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="1" />
                
			
		
</LinearLayout>
		<RelativeLayout android:layout_width="fill_parent"
			android:layout_height="54dip" android:background="@android:drawable/bottom_bar">
			<Button android:id="@+id/btn_done" 
				android:text="@string/validate"
				android:drawablePadding="10dip" 
				android:drawableRight="@drawable/ic_btn_done"
				android:minWidth="@dimen/button_minWidth" 
				android:layout_margin="5dip"
				android:layout_alignParentRight="true" 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
				android:layout_centerVertical="true" />
		
</RelativeLayout>
	</LinearLayout>
</ScrollView>

